--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "leaflet": "^1.7.1"
+        "leaflet": "^1.7.1",
+        "leaflet.marker.highlight": "^0.0.3"
     }
 }
