--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
+        "laravel-notification-channels/fcm": "~2.0",
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.13",
         "laravel/telescope": "^4.6",
