--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "netojose/laravel-api-explorer": "^2.0",
-        "propaganistas/laravel-phone": "^4.2"
+        "propaganistas/laravel-phone": "^4.2",
+        "yajra/laravel-datatables-oracle": "^9.15"
     },
     "require-dev": {
         "backpack/generators": "^3.1",
