--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "leaflet": "^1.7.1",
-        "leaflet.marker.highlight": "^0.0.3"
+        "leaflet.marker.highlight": "^0.0.3",
+        "leaflet.markercluster": "^1.5.3"
     }
 }
